--- a/CSS/about-me.css
+++ b/CSS/about-me.css
@@ -28,6 +28,6 @@ button.Home {background-color: khaki;
   background-color: #4CAF50;
   color: white;}
 img{width: 275px;text-align: center;display:block; margin-left: auto; margin-right: auto; width: 35%}
-@media screen and (max-width: 1000px) {
+@media screen and (min-width: 2500px) {
   body {
     background-color: peachpuff;}}
