--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,9 +1,9 @@
 ul.top {text-align: right;}
 h2.title {padding:60px; font-family: Georgia, sans-serif; font-size: 50px; color: white; text-align: center;}
 li {display: inline;margin-right: 10px; font-size: 20px}
-h3 {color:green; font-family: Georgia, sans-serif; font-size: 30px;}
+h3 {color:green; font-family: Georgia, sans-serif; font-size: 30px; text-align: center;}
 h4 {padding:60px; font-family: Georgia, sans-serif; font-size: 30px; color:white; text-align: center;}
-p {color:black; text-align: left; font-size: 25px; font-family: 'garamond',serif; margin-right: 300px; margin-left: 50px;}
+p {color:black; text-align: left; font-size: 25px; font-family: 'garamond',serif; margin-right: 200px; margin-left: 50px;}
 body {background-color: lemonchiffon;}
 body {background-image: url("pic1.jpg"); height: 300px; background-position: center; background-repeat: no-repeat; background-size: cover; position: relative;}
 li {color: white}
@@ -30,7 +30,7 @@ button.Home {background-color: khaki;
   color: white;}
   p.intro {text-align: center; font-size: 30px; font-family: 'garamond',serif; margin-top: 100px; margin-bottom: 100px; margin-right: 150px; margin-left: 150px; border: 2px solid green;
   border-radius: 20px;}
-img{width: 275px;text-align: left;display:block; margin-left: 50px; margin-right: auto; width: 45%}
+img{width: 275px;text-align: center;display:block; margin-left: auto; margin-right: auto; width: 45%}
 img.reading {width: 275px;text-align: center;display:block; margin-left: auto; margin-right: auto; width: 45%}
 @media screen and (min-width: 2000px) {
   body {background-color: peachpuff;}}
