--- a/CSS/about-me.css
+++ b/CSS/about-me.css
@@ -2,7 +2,7 @@ ul.top {text-align: right;}
 h2 {padding:75px; font-family: Georgia, sans-serif; font-size: 100px; color: white; text-align: center;}
 h3 {padding:75px; font-family: Georgia, sans-serif; font-size: 30px; color: black; text-align: center;}
 li {display: inline;margin-right: 10px; font-size: 20px}
-p {color:black; text-align: center; font-size: 25px; font-family: 'garamond',serif; margin-right: 300px; margin-left: 300px;}
+p {color:black; text-align: center; font-size: 25px; font-family: 'garamond',serif; margin-right: 200px; margin-left: 50px;}
 body {background-color: lemonchiffon;}
 body {background-image: url("pic1.jpg"); height: 300px; background-position: center; background-repeat: no-repeat; background-size: cover; position: relative;}
 li {color: black}
@@ -28,6 +28,7 @@ button.Home {background-color: khaki;
   background-color: #4CAF50;
   color: white;}
 img{width: 275px;text-align: center;display:block; margin-left: auto; margin-right: auto; width: 35%}
-@media only screen and (device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) { } {
-  body {
-    background-color: peachpuff;}}
+  @media only screen
+    and (device-width: 390px)
+    and (device-height: 844px)
+    and (-webkit-device-pixel-ratio: 3) {body {background-color: peachpuff;}}
