--- a/CSS/about-me.css
+++ b/CSS/about-me.css
@@ -31,4 +31,4 @@ img{width: 275px;text-align: center;display:block; margin-left: auto; margin-rig
   @media only screen
     and (device-width: 390px)
     and (device-height: 844px)
-    and (-webkit-device-pixel-ratio: 3) {body {background-color: peachpuff;}}
+    and (-webkit-device-pixel-ratio: 3) {body {background-color: peachpuff; background-image: url("pic1.jpg"); height: 400px; background-position: center; background-repeat: no-repeat; background-size: cover; position: relative;}}
