--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -28,11 +28,7 @@ button.Home {background-color: khaki;
     button:hover {
   background-color: #4CAF50;
   color: white;}
-  p.intro {text-align: center; font-size: 30px; font-family: 'garamond',serif; margin-top: 100px; margin-bottom: 100px; margin-right: 150px; margin-left: 150px; border: 2px solid green;
+  p.intro {padding: 85px; text-align: center; font-size: 30px; font-family: 'garamond',serif; margin-top: 100px; margin-bottom: 100px; margin-right: 150px; margin-left: 150px; border: 2px solid green;
   border-radius: 20px;}
 img{width: 275px;text-align: left;display:block; margin-left: 100px; margin-right: auto; width: 45%}
 img.reading {width: 275px;text-align: center;display:block; margin-left: auto; margin-right: auto; width: 55%}
-@media only screen
-  and (device-width: 390px)
-  and (device-height: 844px)
-  and (-webkit-device-pixel-ratio: 3) {body {background-color: peachpuff;}}
